# bce-project

./: .gitignore  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dags/: bce_dags.py
scripts/: build_bronze.py  build_silver.py  pilot_batch.sh  seed_state.py  verify.py
src/bce/: __init__.py  catalog.py  config.py  pipeline.py  scrapers.py  silver.py  state.py  utils.py
tests/: conftest.py  test_bce.py
