[project]
name = "bce-pipeline"
version = "0.1.0"
description = "BCE data pipeline — MongoDB catalog, State DB, HDFS bronze, Airflow"
requires-python = ">=3.11"
dependencies = [
    "pymongo>=4.6",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.40",
    "pandas>=2.1",
    "stem>=1.8",
    "PySocks>=1.7",
]

[project.optional-dependencies]
airflow = ["apache-airflow>=2.8"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
